[package]
name = "ballast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = {version="1.28.2", features=["full"]}
clap = {version="4.3.1", features=["derive"]}
serde = "1.0.163"
serde_json = "1.0.96"
futures = "0.3.28"
