[package]
name = "ballast"
description = "api snapshot load testing"
authors = ["synoet"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/synoet/ballast"
categories = ["command-line-utilities"]
repository = "https://github.com/synoet/ballast"
license = "MIT"
readme = "README.md"
exclude = [
  "ballast.json",
  ".ballast_snapshot.json",
]

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = {version="1.28.2", features=["full"]}
clap = { version = "4.3.1", features = ["derive"] }
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
futures = "0.3.28"
crossterm = "0.26.1"
console = "0.15.7"
anyhow = "1.0.72"
